--- a/src/app/components/message-button/message-button.component.html
+++ b/src/app/components/message-button/message-button.component.html
@@ -1,3 +1,13 @@
-<button class="message-button" (click)="openChat()">
-  <i class="fas fa-comment"></i>
-</button>
+<div>
+  <button class="message-button chat-button" (click)="openChat()">
+    <i class="fas fa-comment"></i>
+  </button>
+
+  <button class="message-button zalo-button" (click)="openZalo()">
+    <img src="../../../assets/images/travel/zalo.png" alt=""/>
+  </button>
+
+  <button class="message-button facebook-button" (click)="openFacebook()">
+    <i class="fab fa-facebook"></i> <!-- Biểu tượng Facebook -->
+  </button>
+</div>
