--- a/src/app/app-layout/trade/admin-chat/admin-chat.component.html
+++ b/src/app/app-layout/trade/admin-chat/admin-chat.component.html
@@ -1,44 +1,58 @@
-<div class="messenger-container mb-4 mt-2">
+<div class="messenger-container container-fluid mt-4 mb-4">
+  <div class="row">
     <!-- Danh sách người dùng -->
-    <div class="user-list">
-      <ng-container *ngFor="let item of infoMessages">
-        <div class="user-item" (click)="clickInfoUser(item)">
-          <span>{{item.userName}}</span>
-        </div>
-      </ng-container>
-    </div>
-  
-    <!-- Hộp tin nhắn -->
-    <div class="message-box">
-      <div class="message-header">
-        <span>Tin nhắn với <span id="current-user">{{infoMessage.userName}}</span></span>
+    <div class="user-list col-md-3">
+      <div class="list-group">
+        <ng-container *ngFor="let item of infoMessages">
+          <a href="javascript:void(0)" class="list-group-item list-group-item-action" (click)="clickInfoUser(item)">
+            {{item.userName}}
+          </a>
+        </ng-container>
       </div>
-      <div class="message-content">
-        <ul class="messages" #messages>
-            <li class="message" *ngFor="let item of messageList" [ngClass]="{'left': item.message_side === 'receiver', 'right': item.message_side === 'sender'}">
-                <div class="avatar"></div>
+    </div>
+    <!-- Hộp tin nhắn -->
+    <div class="message-box col-md-9">
+      <div class="card">
+        <div class="card-header">
+          Tin nhắn với <strong id="current-user">{{infoMessage.userName}}</strong>
+        </div>
+        <div class="card-body message-content">
+          <ul class="list-unstyled messages" #messages>
+            <li class="message mb-3" *ngFor="let item of messageList"
+                [ngClass]="{'text-left': item.message_side === 'receiver', 'text-right': item.message_side === 'sender'}">
+              <div class="d-flex align-items-start">
+                <div class="avatar" *ngIf="item.message_side === 'receiver'"></div>
                 <div class="text_wrapper">
-                  <div class="name">{{ item.user }}</div>
-                  <div class="text" [innerHTML]="item.message"></div>
-                  <img *ngIf="isImage(item.image)" (click)="imgClick(apiUrl + '/' + item.image)" [src]="apiUrl + '/' + item.image" class="img-fluid rounded chat-image" alt="Chat image" />
-                  <a *ngIf="!isImage(item.image) && item.image" class="file-attachment" [href]="apiUrl + '/' + item.image" download="{{ apiUrl + '/' + item.image }}">
-                    <i class="fas fa-file file-icon"></i>
+                  <div class="name font-weight-bold">{{ item.user }}</div>
+                  <div class="text bg-light p-2 rounded" [innerHTML]="item.message"></div>
+
+                  <img *ngIf="isImage(item.image)" (click)="imgClick(apiUrl + '/' + item.image)"
+                       [src]="apiUrl + '/' + item.image" class="img-fluid rounded chat-image mt-2" alt="Chat image" />
+                  <a *ngIf="!isImage(item.image) && item.image"
+                     class="file-attachment d-flex align-items-center mt-2"
+                     [href]="apiUrl + '/' + item.image" download="{{ apiUrl + '/' + item.image }}">
+                    <i class="fas fa-file file-icon mr-2"></i>
                     <span class="file-name">{{ item.image.replace("upload/product/", "") }}</span>
-                    <i class="fas fa-download download-icon"></i>
+                    <i class="fas fa-download download-icon ml-auto"></i>
                   </a>
                 </div>
-              </li>
-        </ul>
-      </div>
-      <div class="bottom_wrapper clearfix">
-        <div class="message_input_wrapper">
-          <input type="text" class="message_input" placeholder="Message..." [(ngModel)]="messageInput" (keyup.enter)="sendMessage(false)" />
+                <div class="avatar" *ngIf="item.message_side === 'sender'"></div>
+              </div>
+            </li>
+          </ul>
         </div>
-        <div class="send_message" (click)="sendMessage(false)">
-          <div class="icon"></div>
-          <div class="text">Send</div>
+        <div class="card-footer bottom_wrapper">
+          <div class="input-group">
+            <input type="text" class="form-control message_input" placeholder="Nhập tin nhắn..." [(ngModel)]="messageInput" (keyup.enter)="sendMessage(false)" />
+            <div class="input-group-append">
+              <button class="btn btn-primary send_message" (click)="sendMessage(false)">
+                <i class="fas fa-paper-plane"></i> Gửi
+              </button>
+            </div>
+          </div>
+          <app-image-upload class="mt-2" [isShowImg]="false" (changeFile)="changeFileName($event)" [imageUrl]="imgName"></app-image-upload>
         </div>
-        <app-image-upload class="mb-2 shadow-sm" [isShowImg]="false" (changeFile)="changeFileName($event)" [imageUrl]="imgName"></app-image-upload>
       </div>
     </div>
   </div>
+</div>
