--- a/src/app/product/register-catelogy/register-catelogy.component.html
+++ b/src/app/product/register-catelogy/register-catelogy.component.html
@@ -1,4 +1,4 @@
-<div class="container MT-5">
+<div class="container mt-5 mb-2">
     <div class="col">
       <div class="card shadow-lg">
         <div class="card-body">
