--- a/src/app/app-layout/about/contact/contact.component.css
+++ b/src/app/app-layout/about/contact/contact.component.css
@@ -2,7 +2,7 @@
   padding: 40px;
   max-width: 800px;
   margin: 0 auto;
-  background-color: #ffffff;
+  background-color: #f9f9f9;
   border-radius: 12px;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
 }
@@ -53,7 +53,7 @@
 }
 
 .info-card {
-  background-color: #fff;
+  background-color: #f9f9f9;
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
@@ -85,7 +85,7 @@
 }
 
 .contact-form {
-  background-color: #fff;
+  background-color: #f9f9f9;
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
