--- a/src/app/app-layout/post/post-form/post-form.component.html
+++ b/src/app/app-layout/post/post-form/post-form.component.html
@@ -1,4 +1,4 @@
-<div class="page-content">
+<div class="container mt-5 mb-2">
   <div class="row justify-content-center">
     <div class="col-lg-8 col-md-10">
       <div class="card shadow-lg border-0">
