--- a/src/app/order/order-detail/order-detail.component.html
+++ b/src/app/order/order-detail/order-detail.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5" *ngIf="orderDetails">
+<div class="container mt-5 mb-2" *ngIf="orderDetails">
   <!-- Search Order Section -->
   <div class="row mb-4">
       <div class="col-md-6">
