--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -181,7 +181,7 @@
 
 
 <!-- Testimonials Section -->
-<section class="testimonials-section py-7 bg-light">
+<section class="py-7">
   <div class="container">
     <div class="text-center mb-5">
       <h2 class="display-5 mt-3 mb-4">Khách Hàng Nói Gì Về Chúng Tôi</h2>
