--- a/src/app/order/product-list/product-list.component.html
+++ b/src/app/order/product-list/product-list.component.html
@@ -26,53 +26,23 @@
       <h2 class="display-5 mt-3 mb-4">Dịch vụ làm visa</h2>
 
       <!-- Visa Service Card -->
-      <div class="col-md-4">
+       <ng-container *ngFor="let item of items" >
+        <div class="col-md-4">
           <div class="card service-card">
-              <a href="#" target="_blank" rel="noopener noreferrer">
-                  <img src="https://kalivisa.com/wp-content/uploads/2023/04/my-1200x800.webp"
+              <a [routerLink]="['/shopping/detail', item.id]"  rel="noopener noreferrer">
+                  <img src="{{item.img}}"
                        alt="Visa Mỹ" class="card-img-top">
               </a>
               <div class="card-body">
-                  <h5 class="card-title">Visa Mỹ</h5>
-                  <p class="card-text">
-                      Kali Visa cung cấp visa Mỹ ngắn hạn. Trong đó hỗ trợ diện B1/B2: Du lịch –
-                      Thăm thân – Công tác.
-                  </p>
+                  <h5 class="card-title">{{item.name}}</h5>
+                  <!-- <p class="card-text">
+                    {{item.description}}
+                  </p> -->
               </div>
           </div>
-      </div>
-
-      <!-- Visa Úc Card -->
-      <div class="col-md-4">
-          <div class="card service-card">
-              <a href="#" target="_blank" rel="noopener noreferrer">
-                  <img src="https://kalivisa.com/wp-content/uploads/2023/04/uc-1200x800.webp"
-                       alt="Visa Úc" class="card-img-top">
-              </a>
-              <div class="card-body">
-                  <h5 class="card-title">Visa Úc</h5>
-                  <p class="card-text">
-                      Visa Úc gồm các loại visa, trong đó Kali Visa đang hỗ trợ diện visa 600,
-                      482 và 462.
-                  </p>
-              </div>
-          </div>
-      </div>
-
-      <!-- Visa Anh Card -->
-      <div class="col-md-4">
-          <div class="card service-card">
-              <a href="#" target="_blank" rel="noopener noreferrer">
-                  <img src="https://kalivisa.com/wp-content/uploads/2023/04/anh-1200x800.webp"
-                       alt="Visa Anh" class="card-img-top">
-              </a>
-              <div class="card-body">
-                  <h5 class="card-title">Visa Anh</h5>
-                  <p class="card-text">
-                      Visa Anh Quốc ngắn hạn cho phép Du lịch – Thăm thân – Công tác.
-                  </p>
-              </div>
-          </div>
-      </div>
+        </div>
+       </ng-container>
   </div>
 </div>
+
+<app-paging (handelChangePage)="handlePageEvent($event)" [pageSize]="len" [length]="total"></app-paging>
